news page & news single page

--- a/page-news-single.html
+++ b/page-news-single.html
@@ -80,66 +80,71 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2>About Us</h2>
+                    <h2>We have moved to our new place at 70 Attfield Street Maddington</h2>
+                    <p class="published-on">Published On: March 14, 2017</p>
                     <div class="breadcrumb color-light-blue">
-                        Home >> About Us
+                        Home >> News >> We have moved to our new place at 70 Attfield Street Maddington
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="about-us p-t-80 p-b-80">
+    <section class="news-single-section p-t-80 p-b-80">
         <div class="container">
             <div class="row">
-                <div class="col-md-7">
-                    <div class="about-us-left">
-                        <h2 class="b-s-10 color-light-blue">About Granada Medical Practice</h2>
-                        <p class="b-s-30">Granada Medical is situated in Maddington, Western Australia. Our practice
-                            is located
-                            approximately 13 kilometres away from Perth CBD. We are a predominately bulk billing
-                            general
-                            practice but a gap fee may apply for some procedures. You will be informed of any gap
-                            fee at
-                            the time of booking or prior to the consultation.</p>
-
-                        <p class="b-s-40"> We provide a wide range of general practice services to the community and
-                            our staff are
-                            dedicated to provide quality care in a friendly and welcoming environment.</p>
-                        <div class="detail-box-container b-s-50">
-                            <div class="detail-box text-center">
-                                <div class="detail-box-content">
-                                    <h2 class="color-light-blue">10+</h2>
-                                    <p>Years of <br/> Excellence</p>
+                <div class="col-md-12">
+                    <div class="news-single-box-container">
+                        <div class="news-single-box">
+                            <img src="img/img-news-single.jpg" alt="granada-news"
+                                 title="News - We have moved to our new place at 70 Attfield Street Maddington"/>
+                            <div class="news-single-content">
+                                <p class="b-s-30">Granada Medical Practice was established by Dr Arosha Vidyabhushana
+                                    and Dr Fatin
+                                    Wajdi on the 16th of January 2012, beginning as a small practice on Burslem Drive,
+                                    Maddington. At that point in time, Dr Arosha and Dr Fatin had been working together
+                                    in the Maddington area since 2008, and welcomed their ever-growing patient base on
+                                    the new and exciting chapter of their careers. Today, the practice is open seven
+                                    days a week and only being closed during public holidays.</p>
+                                <p class="b-s-30">Granada Medical Practice was established by Dr Arosha Vidyabhushana
+                                    and Dr Fatin
+                                    Wajdi on the 16th of January 2012, beginning as a small practice on Burslem Drive,
+                                    Maddington. At that point in time, Dr Arosha and Dr Fatin had been working together
+                                    in the Maddington area since 2008, and welcomed their ever-growing patient base on
+                                    the new and exciting chapter of their careers. Today, the practice is open seven
+                                    days a week and only being closed during public holidays.</p>
+                                <p class="b-s-30">Granada Medical Practice was established by Dr Arosha Vidyabhushana
+                                    and Dr Fatin
+                                    Wajdi on the 16th of January 2012, beginning as a small practice on Burslem Drive,
+                                    Maddington. At that point in time, Dr Arosha and Dr Fatin had been working together
+                                    in the Maddington area since 2008, and welcomed their ever-growing patient base on
+                                    the new and exciting chapter of their careers. Today, the practice is open seven
+                                    days a week and only being closed during public holidays.</p>
+                                <p class="b-s-30">Granada Medical Practice was established by Dr Arosha Vidyabhushana
+                                    and Dr Fatin
+                                    Wajdi on the 16th of January 2012, beginning as a small practice on Burslem Drive,
+                                    Maddington. At that point in time, Dr Arosha and Dr Fatin had been working together
+                                    in the Maddington area since 2008, and welcomed their ever-growing patient base on
+                                    the new and exciting chapter of their careers. Today, the practice is open seven
+                                    days a week and only being closed during public holidays.</p>
+                                <div class="quote-box">
+                                    <p class="quote-text">“We are blessed with very efficient and friendly staff .I
+                                        believes the success so
+                                        far with all aspects is largely due to the commitment of our practice manager,
+                                        nurses and the reception staff. Also we are very proud to have extremely
+                                        experienced and commited doctors who are well respected and loved by the
+                                        patients of the area”</p>
+                                    <p class="quote-auth">- Practice Principal GP Dr Arosha Vidyabhushana.</p>
+                                    <div class="clearfix"></div>
                                 </div>
-                            </div>
-                            <div class="detail-box text-center">
-                                <div class="detail-box-content">
-                                    <h2 class="color-light-blue">07</h2>
-                                    <p>Full-time <br/> Doctors</p>
-                                </div>
-                            </div>
-                            <div class="detail-box text-center">
-                                <div class="detail-box-content">
-                                    <h2 class="color-light-blue">03</h2>
-                                    <p>Part-time <br/> Doctors</p>
-                                </div>
+                                <p class="b-s-30">Patient feedback plays a vital role in maintaining the high standard
+                                    of healthcare that Granada Medical Practice sets for itself, and so patients are
+                                    always welcome to provide their feedback on the services they receive from both
+                                    admin staff and the medical staff through the feedback questionnaire available at
+                                    the front desk. In Dr Arosha’s words, <b>“it is the best way to improve the services
+                                        and share the satisfaction of the good services we provide with all our staff!”.</b> </p>
                             </div>
                         </div>
-                        <div class="about-us-img-container">
-                            <img src="img/AGPAL-logo.jpg" alt="AGPAL-logo"
-                                 title="AGPAL | Australian General Practice Accreditation Limited"/>
-                            <img src="img/WAGPET-logo.jpg" alt="WAGPET-logo"
-                                 title="WA General Practice Education & Training"/>
-                            <div class="clearfix"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-5">
-                    <div class="about-us-right">
-                        <img src="img/img-about-us-page.jpg" alt="about-us-image"
-                             title="About Granada Medical Practice"/>
-                        <div class="clearfix"></div>
                     </div>
                 </div>
             </div>
@@ -220,37 +225,41 @@
                 <div class="row">
                     <div class="col-md-4">
                         <h5 class="footer-title b-s-30">about granada</h5>
-                        <p class="b-s-30">Granada Medical Practice is a purpose-built family medical centre located in Maddington. Our
+                        <p class="b-s-30">Granada Medical Practice is a purpose-built family medical centre located in
+                            Maddington. Our
                             staff look forward to welcoming you and provide the best possible care to you and you family
                             members.</p>
-                        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fgranadamedical&tabs&width=340&height=70&small_header=true&adapt_container_width=false&hide_cover=false&show_facepile=false&appId=324555369255445" width="340" height="70" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fgranadamedical&tabs&width=340&height=70&small_header=true&adapt_container_width=false&hide_cover=false&show_facepile=false&appId=324555369255445"
+                                width="340" height="70" style="border:none;overflow:hidden" scrolling="no"
+                                frameborder="0" allowfullscreen="true"
+                                allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                     </div>
                     <div class="col-md-4">
                         <div class="row">
                             <div class="col-md-6">
                                 <h5 class="footer-title b-s-30">Site links</h5>
                                 <ul class="footer-menu">
-                                    <li> <a href="index.html"> Home </a> </li>
-                                    <li> <a href="page-about-us.html"> About Us </a> </li>
-                                    <li> <a href="page-services.html"> Services </a> </li>
-                                    <li> <a href="#"> News </a> </li>
-                                    <li> <a href="#"> Staff </a> </li>
-                                    <li> <a href="#"> Resources </a> </li>
-                                    <li> <a href="#"> Contact Us </a> </li>
-                                    <li> <a href="#"> Book Online </a> </li>
+                                    <li><a href="index.html"> Home </a></li>
+                                    <li><a href="page-about-us.html"> About Us </a></li>
+                                    <li><a href="page-services.html"> Services </a></li>
+                                    <li><a href="#"> News </a></li>
+                                    <li><a href="#"> Staff </a></li>
+                                    <li><a href="#"> Resources </a></li>
+                                    <li><a href="#"> Contact Us </a></li>
+                                    <li><a href="#"> Book Online </a></li>
                                 </ul>
                             </div>
                             <div class="col-md-6">
                                 <h5 class="footer-title b-s-30">Services</h5>
                                 <ul class="footer-menu">
-                                    <li> <a href="#"> Women's Health </a> </li>
-                                    <li> <a href="#"> Men's Health </a> </li>
-                                    <li> <a href="#"> Child and Adolescent Health </a> </li>
-                                    <li> <a href="#"> Immunisation </a> </li>
-                                    <li> <a href="#"> Investigations </a> </li>
-                                    <li> <a href="#"> Minor Procedures </a> </li>
-                                    <li> <a href="#"> Health Checks </a> </li>
-                                    <li> <a href="#"> Chronic Disease Management</a> </li>
+                                    <li><a href="#"> Women's Health </a></li>
+                                    <li><a href="#"> Men's Health </a></li>
+                                    <li><a href="#"> Child and Adolescent Health </a></li>
+                                    <li><a href="#"> Immunisation </a></li>
+                                    <li><a href="#"> Investigations </a></li>
+                                    <li><a href="#"> Minor Procedures </a></li>
+                                    <li><a href="#"> Health Checks </a></li>
+                                    <li><a href="#"> Chronic Disease Management</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -285,7 +294,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <p>© Copyright 2022 Granada Medical. All Rights Reserved. Site by <a href="https://infoconnect.com.au/" target="_blank">
+                        <p>© Copyright 2022 Granada Medical. All Rights Reserved. Site by <a
+                                href="https://infoconnect.com.au/" target="_blank">
                             Infoconnect </a></p>
                     </div>
                 </div>
