--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <li><a href="index.html"> Home </a></li>
                             <li><a href="page-about-us.html"> about </a></li>
                             <li><a href="page-services.html"> services </a></li>
-                            <li><a href="#"> news </a></li>
+                            <li><a href="page-news.html"> news </a></li>
                             <li><a href="#"> staff </a></li>
                             <li><a href="#"> resources </a></li>
                             <li><a href="#"> contacts </a></li>
